# rdfcodegen

./: LICENSE  README.md  pyproject.toml
.bkp/: __main__.py  pyproject.toml
.bkp/samples/: food_establishment.ts
.devcontainer/: devcontainer-lock.json  devcontainer.json
