[project]
name = "rdfcodegen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "carlosmpv", email = "carlosmpvaldes@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
rdfcodegen = "rdfcodegen:main"

[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"
